added save language + minor changes
chosen language is saved as default. updated Chinese deathpanalty tooltip.

--- a/PalworldServerManager/PalworldServerManager/Form_ServerSettings.zh-Hans.resx
+++ b/PalworldServerManager/PalworldServerManager/Form_ServerSettings.zh-Hans.resx
@@ -364,6 +364,12 @@
   <data name="label34.Text" xml:space="preserve">
     <value>死亡惩罚</value>
   </data>
+  <data name="label34.ToolTip" xml:space="preserve">
+    <value>None 不掉落任何东西
+Item 掉落装备以外的道具
+ItemAndEquipment 掉落所有物品
+All 掉落所有物品及队伍内帕鲁</value>
+  </data>
   <data name="label35.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft YaHei, 9pt</value>
   </data>
