fixed bugs + added save language + added deathpenalty chinese tooltips
fixed bugs:
-server setting args were no synced when language changed. NOTICE: to save server arg you need to start the server. if you dont start the server before changing the language, the server arg wont be saved. This is not part of the bug.
-server settings form mouse wheel were able to scroll through combo box items.

--- a/PalworldServerManager/PalworldServerManager/Form1.zh-Hans.resx
+++ b/PalworldServerManager/PalworldServerManager/Form1.zh-Hans.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="comboBox_language.Text" xml:space="preserve">
+    <value>语言</value>
+  </data>
+  <data name="comboBox_language.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -598,6 +604,9 @@
         5/n/B7K/mDoMnzwAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="checkBox_noSteam.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="checkBox_log.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft YaHei, 8.25pt</value>
   </data>
@@ -634,6 +643,9 @@
   <data name="label1.Text" xml:space="preserve">
     <value>幻兽帕鲁服务器管理器</value>
   </data>
+  <data name="label1.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="button_startServer.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft YaHei, 9pt</value>
   </data>
@@ -651,6 +663,12 @@
   </data>
   <data name="button_downloadSteamCMD.Text" xml:space="preserve">
     <value>下载解压 Steam CMD</value>
+  </data>
+  <data name="panel1.ToolTip" xml:space="preserve">
+    <value />
+  </data>
+  <data name="panel_ServerSettings.ToolTip" xml:space="preserve">
+    <value />
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1495,5 +1513,8 @@
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>幻兽帕鲁服务器管理器 v1</value>
+  </data>
+  <data name="$this.ToolTip" xml:space="preserve">
+    <value />
   </data>
 </root>
